# lidx

./: .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  bench_incremental.sh  install.sh  market-context.md  package.json  skills-lock.json
.claude/: settings.json
.github/workflows/: release.yml
.sandcastle/: CODING_STANDARDS.md  Dockerfile  implement-prompt.md  main.ts  merge-prompt.md  plan-prompt.md  review-prompt.md
.sandcastle/implement/: prompt.md
.sandcastle/implement-pr/: prompt.md
.sandcastle/implement-prd/: prompt.md
.sandcastle/review/: prompt.md
.sandcastle/to-issues-prd/: prompt.md
benches/: impact.rs
docs/: implementation-plan.md  incremental-indexing.md  roadmap-features.md
src/: cli.rs  config.rs  context.rs  diagnostics.rs  gather_context.rs  git_mining.rs  impact.rs.old  init.rs  lib.rs  main.rs  mcp.rs  metrics.rs  model.rs  repo_map.rs  resolve.rs  rpc.rs  search.rs  subgraph.rs  traversal.rs  util.rs  watch.rs
tests/: analyze_impact.rs  bicep_extract.rs  context.rs  csharp_extract.rs  dead_symbols.rs  diagnostics_dedup.rs  diagnostics_sarif.rs  gather_context.rs  go_extract.rs  handlers_resolve.rs  javascript_extract.rs  lua_extract.rs  markdown_extract.rs  metrics_complexity.rs  metrics_duplication.rs  mvp_indexing.rs  next_hops_validity.rs  postgres_extract.rs  python_extract.rs  recovery_next_hops.rs  repo_map.rs  rust_extract.rs  rust_module_file_link.rs  search_text.rs  security_integration.rs  sql_extract.rs  start_resolution_recovery.rs  trace_flow.rs  typescript_extract.rs  yaml_extract.rs
(+74 files in other folders)
