[package]
name = "lidx"
version = "0.3.3"
edition = "2024"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
notify = "8.2"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rusqlite = { version = "0.31", features = ["bundled", "load_extension"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.25"
tree-sitter-c-sharp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-lua = "0.4"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-sequel = "0.3"
tree-sitter-typescript = "0.23"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "impact"
harness = false
